--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="title_my_profile">My Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="COVID_API_BASE_URL">https://covid19.mathdro.id/api/</string>
+
+
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
